...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/stxnext_green"/>

    <FrameLayout
        android:layout_width="match_parent"
...
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:id="@+id/superhero_mode_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginTop="18dp"
...
                                android:paddingTop="12dp"
                                android:text="@string/im_superhero"
                                android:textColor="@color/stxnext_green_dark"
                                android:textSize="18dp"/>

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/superhero_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="24dp"
                                android:checked="false"
                                app:theme="@style/Switch"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/time_report_notification_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginTop="18dp"
...

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/call_notification_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginTop="18dp"
...
                        android:layout_gravity="center"
                        android:layout_margin="18dp"
                        card_view:cardCornerRadius="4dp"
                        style="@style/CardView.Light">

                        <TextView
                            android:id="@+id/logout_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/selector_default_button"
                            android:clickable="true"
                            android:gravity="center"
                            android:padding="16dp"
...
