<resources>
    <string name="app_name">STX Next Intranet</string>
    <string name="intranet">Intranet</string>
    <string name="login">Log in</string>
    <string name="stxnext">STX Next</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="employees_list">Employees</string>
    <string name="holiday">Holiday</string>
    <string name="work_from_home">Work From Home</string>
    <string name="out_of_office">Out Of Office</string>
    <string name="absence">Absence</string>
    <string name="absences">Absences</string>
    <string name="teams_list">Teams</string>
    <string name="team_list">Team</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login_failure">Login failed. Please try again.</string>
    <string name="late">I\'ll be late!</string>
    <string name="report_out_office">Report out of office</string>
    <string name="submit_absence">Submit absence/holiday</string>
    <string name="credits">Credits</string>
    <string name="development_team">Development</string>
    <string name="design"><![CDATA[Design & UX]]></string>
    <string name="logout">logout</string>
    <string name="late_title">I\'ll be at work at:</string>
    <string name="submit">Submit</string>
    <string name="move_finger">Move your finger!</string>
    <string name="explanation">Explanation…</string>
    <string name="summary">Summary</string>
    <string name="selected">Selected</string>
    <string name="remaining">Remaining</string>
    <string name="all">All</string>
    <string name="type">Type:</string>
    <string name="planned_leave">Planned leave</string>
    <string name="leave_at_request">Leave at request</string>
    <string name="illness">Illness</string>
    <string name="illness_unpaid">Illness (unpaid)</string>
    <string name="compassionate_leave">Compassionate leave</string>
    <string name="other">Other</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="different_month_holiday_warning">Please submit seperate absence for each month.</string>
    <string name="im_superhero">I am a SuperHero!</string>
    <string name="time_report_notification">Time report notification</string>
    <string name="validation_hour_difference_warning">End hour is lower than start hour.</string>
    <string name="validation_day_difference_warning">You can not report our of office for the day in the past.</string>
    <string name="validation_to_many_days">You do not have enough leave days!</string>
    <string name="validation_zero_days">Woow, first of all: select proper days in calendar</string>
    <string name="i_will_be_later">I\'ll be later</string>
    <string name="give_lateness_reason">Please give reason for lateness</string>
    <string name="lateness_reason">Lateness reason: </string>
    <string name="saved">Request has been sent</string>
    <string name="validation_no_explanation">Please add an explanation</string>
    <string name="reqest_error">Internet connection error. Try again!</string>
    <string name="office">Office:</string>
    <string name="team">Team:</string>
    <string name="teams">Teams:</string>
    <string name="date">Date:</string>
    <string name="call">Call</string>
    <string name="send_email">Send e-mail</string>
    <string name="contact_with">Contact with:</string>
    <string name="search">Search…</string>
    <string name="send_sms">Send SMS</string>
    <string name="tomorrow">tomorrow</string>
    <string name="about">Offices</string>
    <string name="picture_preview">Profile picture</string>
    <string name="worked_hours_heading">Worked hours</string>
    <string name="add_hours">Add hours</string>
    <string name="quarter_heading">Quarter</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="time_report_for">Time report for</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">Su</string>
    <string name="notif_register_hours_in_intranet">Fill work hours in intranet!</string>
    <string name="notification_time">Time of notification:</string>
    <string name="worked_hours_time_to_add">To add:</string>
    <string name="worked_hours_today_from">Today from:</string>
    <string name="add_hours_ticket_id">Ticket id: </string>
    <string name="add_hours_time_value">Time: </string>
    <string name="add_hours_description">Description: </string>
    <string name="add_hours_connection_error">Could not download data</string>
    <string name="add_hours_connection_error_close">Close</string>
    <string name="add_hours_no_previous_description">No previous descriptions</string>
    <string name="add_hours_validation_error_time_value">Invalid time value! format: 0.00</string>
    <string name="add_hours_validation_error_ticket_id">Invalid ticket id!</string>
    <string name="add_hours_validation_error_description">Invalid description!</string>
    <string name="show">Show</string>
    <string name="prermission_info">This permission is required to show notifications</string>
    <string name="draw_over_info">Add additional permission to show information about the caller</string>
    <string name="draw_over_check_info">You will now see notifications when someone calls</string>
    <string name="call_notifications_preference">Call notifications</string>
    <string name="close">Close</string>
</resources>
