<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/floating_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_alpha"
    android:clickable="true"
    android:focusable="true"
    android:alpha="0"
    tools:context="com.stxnext.intranet2.fragment.FloatingMenuFragment">

    <LinearLayout
        android:id="@+id/floating_buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="38dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/floating_late_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/floating_option_selector"
            android:text="@string/late"
            android:textSize="17sp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:textColor="@color/stxnext_green"
            android:clickable="true"
            android:focusable="true"
            android:alpha="0"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/floating_add_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/floating_option_selector"
            android:text="@string/add_hours"
            android:textSize="17sp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/stxnext_green"
            android:clickable="true"
            android:focusable="true"
            android:alpha="0"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/floating_out_of_office_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/floating_option_selector"
            android:text="@string/report_out_office"
            android:textSize="17sp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/stxnext_green"
            android:clickable="true"
            android:focusable="true"
            android:alpha="0"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/floating_absence_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/floating_option_selector"
            android:text="@string/submit_absence"
            android:textSize="17sp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/stxnext_green"
            android:clickable="true"
            android:focusable="true"
            android:alpha="0"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>
