...
        android:layout_width="wrap_content"
        android:layout_height="@dimen/profile_image_height"
        android:scaleType="fitCenter"
        android:src="@drawable/mr_superhero_profile" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
...
    <FrameLayout
        android:id="@+id/floating_menu_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/floating_button"
        android:layout_width="@dimen/floating_button_radius"
        android:layout_height="@dimen/floating_button_radius"
        android:layout_gravity="right"
        android:layout_marginRight="32dp"
        android:layout_marginTop="@dimen/profile_floating_button_position"
        android:background="@drawable/selector_floating_button"
...
