<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity_profile"/>

        <FrameLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_alpha"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>

    </FrameLayout>

    <include layout="@layout/drawer_layout"/>

</android.support.v4.widget.DrawerLayout>
